test_suite/tests/ui/string/validate/duplicated.stderr
error: Duplicated validators `min_len`.
       Don't worry, you still remain ingenious!
 --> tests/ui/string/validate/duplicated.rs:3:47
  |
3 | #[nutype(validate(min_len = 5, max_len = 255, min_len = 6))]
  |                                               ^^^^^^^
